[tool.poetry]
name = "oauth-spike"
version = "0.1.0"
description = ""
authors = ["Lucas Climenhage <luke.climenhage@gmail.com>"]
readme = "README.md"
packages = [{include = "oauth_spike"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.1"
django-allauth = "^0.60.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
